Resolve conflicts